fix breadCrumbs vertical align

--- a/frontend-service/src/ui/views/_components/BreadCrumb/BreadCrumb.module.scss
+++ b/frontend-service/src/ui/views/_components/BreadCrumb/BreadCrumb.module.scss
@@ -1,5 +1,7 @@
 .container {
   width: 100%;
+  display: flex;
+  align-items: center;
   ul {
     display: flex;
     flex-direction: row;
@@ -7,7 +9,9 @@
     align-items: center;
     width: 100%;
     list-style: none;
+    margin: 0px;
     li {
+      margin-bottom: 0px;
       a {
         display: flex;
         align-items: center;
